# pindrop

./: .glitterrc  .pindrop  Cargo.toml  README.md  config.json  pindrop.config.json
scripts/deploy/: rpi.sh
src/: capture.rs  cli.rs  estimate_poses.rs  field.rs  geometry.rs  lib.rs  main.rs  nt.rs  parser.rs  pose.rs  pose_estimation.rs  pose_estimator.rs
