[package]
name = "pindrop"
version = "0.1.0"
edition = "2021"

[dependencies]
apriltag = "0.4.0"
apriltag-image = "0.1.0"
nalgebra = "0.32.2"
nt = "3.0.0"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"

[dependencies.nokhwa]
version = "0.10.0"
features = ["input-native", "output-wgpu"]

